keycloak/keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: keyclaok
  name: keycloak
  namespace: keycloak
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak-headless
  template:
    metadata:
      labels:
        app: keycloak
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: KEYCLOAK_ADMIN
          value: <user>
        - name: KEYCLOAK_ADMIN_PASSWORD
          value: <password>
        - name: DB_VENDOR
          value: postgres
        - name: DB_ADDR
          value: postgres-svc
        - name: DB_PORT
          value: "5432"
        - name: DB_DATABASE
          value: keycloak
        - name: DB_SCHEMA
          value: public
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: postgres-sec
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: postgres-sec
        - name: KEYCLOAK_PROXY_ADDRESS_FORWARDING
          value: "true"
        - name: KC_PROXY
          value: edge
        - name: KEYCLOAK_FRONTEND_URL
          value: "https://keycloak.icnp.in-soft.co.kr/auth"
        image: quay.io/keycloak/keycloak:17.0.0
        args: ["start-dev"]
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      terminationGracePeriodSeconds: 60
  updateStrategy:
    type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: keycloak
  type: ClusterIP
