keycloak/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec: 
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.icnp.in-soft.co.kr"
    - "keycloak.icnp.in-soft.co.kr"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: keycloak-tls
    hosts:
    - "*.icnp.in-soft.co.kr"
    - "keycloak.icnp.in-soft.co.kr"
