keycloak/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
  - keycloak.icnp.in-soft.co.kr
  gateways:
  - keycloak-gateway
  http:
   - match:
       - uri:
           prefix: /
     route:
       - destination:
           host: keycloak
           port:
             number: 8080
         headers:
           request:
             set:
               x-forwarded-proto: https
